--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@ html, body {
   background-attachment: fixed;
 }
 
+#storyHeading {
+  padding-top: 100px;
+
+}
 /*menu carousel*/
 
 #mycarousel .carousel-inner {
@@ -30,11 +34,18 @@ html, body {
 #eventCarousel .carousel-inner img {
     height: 100%;
 }
+.opacityBg {
+  background: rgba(0,0,0,.65);
+  opacity: 1;
+  margin-right: 5px;
+  max-width: 30%;
+}
 
+#connect .row {
+  display: flex;
+  justify-content: space-between;
+}
 .carousel-caption {
-    position: relative;
-    bottom: -1200px;
-    left: 200px;
     background: rgba(0,0,0,.65);
     opacity: 1;
     padding: 20px 20px;
@@ -44,6 +55,11 @@ html, body {
     box-sizing: border-box;
     z-index: 2;
 }
+#calendar {
+  display: flex;
+  justify-content: center;
+}
+
 
 /*tabs-menu*/
 .full-screen {
@@ -337,7 +353,7 @@ textarea.form-control:focus {
 
 .section {
   position: relative;
-  min-height: 100%;
+  min-height: 88%;
   z-index: 1;
   padding-top: 105px;
   transition: background-color 1s;
@@ -482,7 +498,7 @@ textarea.form-control:focus {
 #services {
   color: #444;
   min-height: 0;
-  padding-bottom: 20px;
+  padding-bottom: 100px;
   position: relative;
   overflow: hidden;
   background-color: #000;
@@ -656,7 +672,7 @@ textarea.form-control:focus {
  color: #444;
  min-height: 0;
  height: auto;
- padding-bottom: 20px;
+ padding-bottom: 100px;
  position: relative;
  overflow: hidden;
  background-color: #000;
