--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -325,7 +325,7 @@ textarea {
 }
 
 a {
-  color: #0ff9e5;
+  color: #ad1512;
   text-decoration: none;
 }
 
@@ -748,8 +748,8 @@ pre code {
 }
 
 .container {
-  padding-right: 15px;
-  padding-left: 15px;
+ /* padding-right: 15px;
+  padding-left: 15px;*/
   margin-right: auto;
   margin-left: auto;
 }
@@ -5613,7 +5613,7 @@ body.modal-open,
   overflow: auto;
   overflow-y: scroll;}
   .modal-body {
-  background-color: gray ;
+  background-color: white ;
 }
 }
 
@@ -6810,4 +6810,65 @@ td.visible-print {
   td.hidden-print {
     display: none !important;
   }
+}
+
+/*clickable content */
+.info-wrapper {
+    height: auto;
+    width: 106px;
+    margin: 4em auto;
+    padding: 0 0 2em 0;
+    position: relative;
+}
+.info {
+  max-height: 50px;
+  height: auto;
+  padding: .5em 0;
+ /* border-bottom: solid 1px #fff;*/
+  border-radius: 0 0 1em 1em;
+  overflow: hidden;
+  position: relative;
+  transition: 1s;
+}
+p { margin: 1em; }
+.info:after, .aftershadow {
+  /*bottom: 0;
+  width: 100%;*/
+  height: 3em;
+  border-radius: 0 0 1em 1em;
+  position: absolute;
+  background: linear-gradient(rgba(192,192,192,0), #ccc);
+  content: '';
+}
+.aftershadow {
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#00cccccc, endColorstr=#ffcccccc);
+}
+.info-wrapper input[type=checkbox] {
+  display: none;
+}
+.info-wrapper label {
+  left: 50%;
+  bottom: 1.5em;
+  width: 9em;
+  height: 1.25em;
+  margin:  0 0 0 -4.5em;
+  border-bottom: solid 1px #fff;
+  border-radius: 0 0 1em 1em;
+  overflow: hidden;
+  position: absolute;
+  font: 700 .67em/1.25em Arial;
+  text-align: center;
+  text-shadow: 0 1px 0 #fff;
+  cursor: pointer;
+}
+.info-wrapper label .more { margin: -.1em 0 .35em; transition: 1s; }
+.info-wrapper .switch {
+  width: 4em;
+  display: inline-block;
+}
+.info-wrapper input[type=checkbox]:checked ~ .info {
+  max-height: 15em;
+}
+.info-wrapper input[type=checkbox]:checked + label .more {
+  margin-top: -1.65em;
 }
