--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5634,13 +5634,24 @@ body.modal-open,
 }
 
 .modal-dialog {
+  position: absolute;
   z-index: 1050;
   width: auto;
   padding: 10px;
   margin-right: auto;
   margin-left: auto;
 }
+/*.modal-dialog{
 
+left: 50%;
+
+margin-left: auto;
+margin-right: auto;
+height: 500px;
+top: 50%;
+margin-top: -250px;
+} 
+*/
 .modal-content {
   position: relative;
   padding: 0;
@@ -5738,7 +5749,7 @@ body.modal-open,
 @media screen and (min-width: 768px) {
   .modal-dialog {
     right: auto;
-    left: 50%;
+    /*left: 50%;*/
     width: 90%;
     padding-top: 30px;
     padding-bottom: 30px;
@@ -6872,3 +6883,6 @@ p { margin: 1em; }
 .info-wrapper input[type=checkbox]:checked + label .more {
   margin-top: -1.65em;
 }
+
+/* for tabs */
+
